[package]
name = "minlang2"
author = "Elsklivet"
about = "A reference implementation of the minlang language in Rust."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }